--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "checkfix": "pnpm biome check --write --unsafe"
   },
   "dependencies": {
+    "@t3-oss/env-nextjs": "^0.13.8",
+    "better-auth": "^1.3.24",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
