--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "checkfix": "pnpm biome check --write --unsafe"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.15",
     "@t3-oss/env-nextjs": "^0.13.8",
     "better-auth": "^1.3.24",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.5",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -22,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.5",
     "json": "^11.0.0",
     "tailwindcss": "^4",
     "typescript": "^5"
